就想找一个像样的工作

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,8 @@
         <module>thread</module>
         <module>reflect</module>
         <module>RPC</module>
+        <module>DesignPattern</module>
+        <module>Spring</module>
     </modules>
 
     <properties>
